Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm
@@ -229,11 +229,8 @@ void SourceBufferPrivateAVFObjC::processInitializationSegment(std::optional<Init
     ALWAYS_LOG(LOGIDENTIFIER, "initialization segment was processed");
 }
 
-void SourceBufferPrivateAVFObjC::didProvideMediaDataForTrackId(Ref<MediaSampleAVFObjC>&& mediaSample, TrackID trackID, const String& mediaType)
+void SourceBufferPrivateAVFObjC::didProvideMediaDataForTrackId(Ref<MediaSampleAVFObjC>&& mediaSample, TrackID, const String&)
 {
-    UNUSED_PARAM(mediaType);
-    UNUSED_PARAM(trackID);
-
     didReceiveSample(WTFMove(mediaSample));
 }
 
@@ -242,7 +239,22 @@ bool SourceBufferPrivateAVFObjC::isMediaSampleAllowed(const MediaSample& sample)
     // FIXME(125161): We don't handle text tracks, and passing this sample up to SourceBuffer
     // will just confuse its state. Drop this sample until we can handle text tracks properly.
     auto trackID = sample.trackID();
-    return isEnabledVideoTrackID(trackID) || m_audioRenderers.contains(trackID);
+    return isEnabledVideoTrackID(trackID) || audioRendererForTrackID(trackID);
+}
+
+void SourceBufferPrivateAVFObjC::updateTrackIds(Vector<std::pair<TrackID, TrackID>>&& trackIdPairs)
+{
+    for (auto& trackIdPair : trackIdPairs) {
+        auto oldId = trackIdPair.first;
+        auto newId = trackIdPair.second;
+        ASSERT(oldId != newId);
+        auto audioRendererNode = m_audioRenderers.extract(oldId);
+        if (!audioRendererNode)
+            continue;
+        audioRendererNode.key() = newId;
+        m_audioRenderers.insert(WTFMove(audioRendererNode));
+    }
+    SourceBufferPrivate::updateTrackIds(WTFMove(trackIdPairs));
 }
 
 void SourceBufferPrivateAVFObjC::processFormatDescriptionForTrackId(Ref<TrackInfo>&& formatDescription, TrackID trackId)
@@ -374,7 +386,6 @@ Ref<MediaPromise> SourceBufferPrivateAVFObjC::appendInternal(Ref<SharedBuffer>&&
             if (RefPtr protectedThis = weakThis.get(); protectedThis)
                 protectedThis->didUpdateFormatDescriptionForTrackId(WTFMove(formatDescription), trackId);
         });
-
 
         parser->setWillProvideContentKeyRequestInitializationDataForTrackIDCallback([abortSemaphore] (TrackID) mutable {
             // We must call synchronously to the main thread, as the AVStreamSession must be associated
@@ -891,8 +902,8 @@ void SourceBufferPrivateAVFObjC::flush(TrackID trackID)
 
     if (isEnabledVideoTrackID(trackID)) {
         flushVideo();
-    } else if (auto it = m_audioRenderers.find(trackID); it != m_audioRenderers.end())
-        flushAudio(it->second.get());
+    } else if (auto* renderer = audioRendererForTrackID(trackID))
+        flushAudio(renderer);
 }
 
 void SourceBufferPrivateAVFObjC::flushVideo()
@@ -917,6 +928,19 @@ void SourceBufferPrivateAVFObjC::flushVideo()
         player->setHasAvailableVideoFrame(false);
         player->flushPendingSizeChanges();
     }
+}
+
+ALLOW_NEW_API_WITHOUT_GUARDS_BEGIN
+AVSampleBufferAudioRenderer *SourceBufferPrivateAVFObjC::audioRendererForTrackID(TrackID trackID) const
+ALLOW_NEW_API_WITHOUT_GUARDS_END
+{
+    if (!m_audioRenderers.size())
+        return nil;
+    if (m_audioRenderers.size() == 1)
+        return m_audioRenderers.begin()->second.get();
+    if (auto it = m_audioRenderers.find(trackID); it != m_audioRenderers.end())
+        return it->second.get();
+    return nil;
 }
 
 ALLOW_NEW_API_WITHOUT_GUARDS_BEGIN
@@ -997,7 +1021,7 @@ bool SourceBufferPrivateAVFObjC::canEnqueueSample(TrackID trackID, const MediaSa
 
 void SourceBufferPrivateAVFObjC::enqueueSample(Ref<MediaSample>&& sample, TrackID trackID)
 {
-    if (!isEnabledVideoTrackID(trackID) && !m_audioRenderers.contains(trackID))
+    if (!isEnabledVideoTrackID(trackID) && !audioRendererForTrackID(trackID))
         return;
 
     ASSERT(is<MediaSampleAVFObjC>(sample));
@@ -1070,11 +1094,10 @@ void SourceBufferPrivateAVFObjC::enqueueSample(Ref<MediaSampleAVFObjC>&& sample,
 
         attachContentKeyToSampleIfNeeded(sample);
 
-        if (auto it = m_audioRenderers.find(trackID); it != m_audioRenderers.end()) {
-            RetainPtr renderer = it->second;
+        if (auto* renderer = audioRendererForTrackID(trackID)) {
             [renderer enqueueSampleBuffer:platformSample.sample.cmSampleBuffer];
             if (RefPtr player = this->player(); player && !sample->isNonDisplaying())
-                player->setHasAvailableAudioSample(renderer.get(), true);
+                player->setHasAvailableAudioSample(renderer, true);
         }
     }
 }
@@ -1148,8 +1171,8 @@ bool SourceBufferPrivateAVFObjC::isReadyForMoreSamples(TrackID trackID)
         return m_videoRenderer && m_videoRenderer->isReadyForMoreMediaData();
     }
 
-    if (auto it = m_audioRenderers.find(trackID); it != m_audioRenderers.end())
-        return [it->second isReadyForMoreMediaData];
+    if (auto* renderer = audioRendererForTrackID(trackID))
+        return [renderer isReadyForMoreMediaData];
 
     return false;
 }
@@ -1193,8 +1216,8 @@ void SourceBufferPrivateAVFObjC::didBecomeReadyForMoreSamples(TrackID trackID)
             m_decompressionSession->stopRequestingMediaData();
         if (m_videoRenderer)
             m_videoRenderer->stopRequestingMediaData();
-    } else if (auto it = m_audioRenderers.find(trackID); it != m_audioRenderers.end())
-        [it->second stopRequestingMediaData];
+    } else if (auto* renderer = audioRendererForTrackID(trackID))
+        [renderer stopRequestingMediaData];
     else
         return;
 
@@ -1222,9 +1245,9 @@ void SourceBufferPrivateAVFObjC::notifyClientWhenReadyForMoreSamples(TrackID tra
                     protectedThis->didBecomeReadyForMoreSamples(trackID);
             });
         }
-    } else if (auto it = m_audioRenderers.find(trackID); it != m_audioRenderers.end()) {
+    } else if (auto* renderer = audioRendererForTrackID(trackID)) {
         ThreadSafeWeakPtr weakThis { *this };
-        [it->second requestMediaDataWhenReadyOnQueue:dispatch_get_main_queue() usingBlock:^{
+        [renderer requestMediaDataWhenReadyOnQueue:dispatch_get_main_queue() usingBlock:^{
             if (RefPtr protectedThis = weakThis.get())
                 protectedThis->didBecomeReadyForMoreSamples(trackID);
         }];
